Add redirect from index.html to home.html

--- a/src/main/resources/templates/Fragments/About.html
+++ b/src/main/resources/templates/Fragments/About.html
@@ -71,7 +71,7 @@
                 <div class="bout-visual">
                     <div class="about-image-container">
                         <div class="about-image-bg"></div>
-                        <img src="/images/aboutme.jpg" alt="about" class="about-image">
+                        <img src="/images/hero-section.jpg" alt="about" class="about-image">
                     </div>
                     <div class="about-decorations">
                         <div class="about-decoration"></div>
