--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,31 +14,31 @@
 </head>
 <body>
     <!--Loading enimation-->
-    <div th:replace="~{Fragments/loader :: loader}"></div>
+    <div th:replace="~{loader :: loader}"></div>
 
     <!--header-->
-    <div th:replace="~{Fragments/header :: site-header}"></div>
+    <div th:replace="~{header :: site-header}"></div>
 
     <!--hero-section-->
-    <div th:replace="~{Fragments/hero :: hero-section}"></div>
+    <div th:replace="~{hero :: hero-section}"></div>
 
     <!--about-section-->
-    <div th:replace="~{Fragments/About :: about-section}"></div>
+    <div th:replace="~{About :: about-section}"></div>
 
     <!--project-section-->
-    <div th:replace="~{Fragments/projeccts :: project-section}"></div>
+    <div th:replace="~{projeccts :: project-section}"></div>
 
     <!--project-section-->
-    <div th:replace="~{Fragments/experience :: experience-section}"></div>
+    <div th:replace="~{experience :: experience-section}"></div>
 
     <!--achievements-->
-    <div th:replace="~{Fragments/achievements :: achievements-section}"></div>
+    <div th:replace="~{achievements :: achievements-section}"></div>
 
     <!--contact-->
-    <div th:replace="~{Fragments/contact :: contact-section}"></div>
+    <div th:replace="~{contact :: contact-section}"></div>
 
     <!---->
-    <div th:replace="~{Fragments/contact :: contact-section}"></div>
+    <div th:replace="~{contact :: contact-section}"></div>
     <!--    Background shapes-->
     <div class="floating-shape shape-1"></div>
     <div class="floating-shape shape-2"></div>
